--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@tailwindcss/vite": "^4.1.8",
+    "graphql": "^16.11.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.6.1",
     "tailwindcss": "^4.1.8",
     "url": "^0.11.4"
   },
