--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.13.8",
     "@tailwindcss/vite": "^4.1.8",
     "graphql": "^16.11.0",
+    "html-react-parser": "^5.2.5",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
